--- a/Testing CI CD/src7/src7/airline0/.github/workflows/ci.yml
+++ b/Testing CI CD/src7/src7/airline0/.github/workflows/ci.yml
@@ -9,4 +9,4 @@ jobs:
     - name: Run Django unit tests
       run: |
         pip3 install --user django
-        python3 manage.py test
+        python manage.py test
